2004-12-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/pango-font.hh: new file.

	* lily/pango-font.cc: new file.

	* lily/font-metric.cc (text_stencil): new routine

	* lily/all-font-metrics.cc (find_pango_font): new routine.

	* lily/include/font-metric.hh (struct Font_metric): add
	text_stencil()

	* configure.in (PKG_CONFIG_PATH): require PANGO_FT2

2004-12-22  Werner Lemberg  <wl@gnu.org>

	Prepare glyph shapes for mf2pt1 conversion.

	* mf/feta-macros.mf, mf_feta-eindelijk.mf: Some formatting.

	* mf/feta-toevallig.mf: Formatting.
	(draw_meta_sharp): Modify path to replace `filldraw' with `fill'.
	("Natural"): Fix paths to allow better postprocessing.
	(draw_meta_flat): Use `z3l' as additional point in path to get
	better conversion with mf2pt1.
	Other minor cleanups.
	("3/4 Flat"): Add auxiliary points and modify path to replace
	`draw' with `fill'.
	("Double Sharp"): Mirror path segments instead of picture elements
	to get a single outline.
	Modify path to replace `filldraw' with `fill'.

2004-12-22  Graham Percival  <gperlist@shaw.ca>

	* input/test/unfold-all-repeats.ly: added file back.

	* Documentation/user/notation.itely,
	Documentation/user/programming-interface.itely
	Documentation/user/changing-defaults.itely: fixed misc broken
	links to input/test/ files.

2004-12-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* tex/texinfo.tex: Update.  We should not be distributing this,
	but since we do, use latest version.

	* Documentation/user/macros.itexi: Comment-out \fetaflat,
	\fetasharp.  Fixes make web.  FIXME: make usable (compatible?) TeX
	macros for feta glyphs.

2004-12-22  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/changing-defaults.itely: fix index for set.

	* Documentation/user/converters.itely: added convert-ly bugs list
	from CVS.

2004-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/lilylib.py (setup_environment): Set GS_FONTPATH, GS_LIB
	to empty.  Fixes make web, using gs-gpl-8.01.  In fact,