@@ -1,5 +1,8 @@
 2004-12-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/paper-book.cc (output): revert: only allow a single output
+	format.
+
 	* lily/include/pango-font.hh: new file.
 
 	* lily/pango-font.cc: new file.
